--- a/pages/home.html
+++ b/pages/home.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Website</title>
+    <link rel="stylesheet" href="../styles/home.css" />
   </head>
   <body>
-    <header>
+    <header class="topContainer">
       <h1>Christopher Paez</h1>
       <nav>
         <ul>
