--- a/pages/home.html
+++ b/pages/home.html
@@ -10,7 +10,7 @@
     <header class="topContainer">
       <h1>Christopher Paez</h1>
       <nav>
-        <ul>
+        <ul class="navContainer">
           <li><a href="./about.html">About</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="./contact.html">Contact</a></li>
