style: Add a div container to main content for centering and style header elements

--- a/pages/home.html
+++ b/pages/home.html
@@ -17,7 +17,7 @@
         </ul>
       </nav>
     </header>
-    <div>
+    <div class="contentContainer">
       <main>
         <img
           src="../img/Animated Pic.png"
