Fix and change style on main content elements

--- a/pages/home.html
+++ b/pages/home.html
@@ -11,6 +11,7 @@
       <h1>Christopher Paez</h1>
       <nav>
         <ul class="navContainer">
+          <li><a href="./about.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="./contact.html">Contact</a></li>
@@ -19,28 +20,26 @@
     </header>
     <div class="contentContainer">
       <main>
-        <img
-          src="../img/Animated Pic.png"
-          alt="Personal Picture"
-          width="200px"
-        />
-        <h2>Aspiring Developer, and Investor</h2>
-        <p>
-          On a journey to become a full-stack developer, combining experience in
-          capital markets with a vision to launch and scale SaaS ventures.
-        </p>
+        <img src="../img/Animated Pic.png" alt="Personal Picture" />
+        <div class="missionStatement">
+          <h2>Aspiring Developer, and Investor</h2>
+          <p>
+            On a journey to become a full-stack developer, combining experience
+            in capital markets with a vision to launch and scale SaaS ventures.
+          </p>
+        </div>
       </main>
       <div>
-        <h2>
+        <h2 class="quote">
           “Action produces information. Just keep on doing stuff.” - Brian
           Armstrong
         </h2>
       </div>
     </div>
     <footer>
-      <a href="https://facebook.com"><img src="" alt="" /></a>
-      <a href="https://linkedin.com"><img src="" alt="" /></a>
-      <a href="https://twitter.com"><img src="" alt="" /></a>
+      <a href="https://facebook.com"> <img src="" alt="" /></a>
+      <a href="https://linkedin.com"> <img src="" alt="" /></a>
+      <a href="https://twitter.com"> <img src="" alt="" /></a>
     </footer>
   </body>
 </html>
