Add more content to about page and change photos

--- a/pages/home.html
+++ b/pages/home.html
@@ -11,7 +11,7 @@
       <h1>Christopher Paez</h1>
       <nav>
         <ul class="navContainer">
-          <li><a href="./about.html">Home</a></li>
+          <li><a href="./home.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="./contact.html">Contact</a></li>
@@ -29,7 +29,7 @@
           </p>
         </div>
       </main>
-      <div>
+      <div class="quoteContainer">
         <h2 class="quote">
           “Action produces information. Just keep on doing stuff.” - Brian
           Armstrong
@@ -37,6 +37,7 @@
       </div>
     </div>
     <footer>
+      <h2>placeholder</h2>
       <a href="https://facebook.com"> <img src="" alt="" /></a>
       <a href="https://linkedin.com"> <img src="" alt="" /></a>
       <a href="https://twitter.com"> <img src="" alt="" /></a>
