Add flexbox to section part of main content

--- a/pages/about.html
+++ b/pages/about.html
@@ -20,21 +20,23 @@
     </header>
     <div class="contentContainer">
       <main>
-        <h2>
+        <h2 class="bodyTitle">
           When I'm not sharpening my skills, you'll find me doing the following:
         </h2>
-        <section>
-          <h2>Calisthenics</h2>
+        <section class="activitySection">
+          <div>
+            <h2>Calisthenics</h2>
+            <p>
+              I practice calisthenics to build functional strength, improve body
+              control, and stay disciplined. It's a minimalist approach to
+              fitness that challenges both the body and mind—no fancy equipment,
+              just consistency and creativity.
+            </p>
+          </div>
           <img
             src="../img/calisthenic-pic.png"
             alt="A calisthenics picture with a red and blue theme"
           />
-          <p>
-            I practice calisthenics to build functional strength, improve body
-            control, and stay disciplined. It's a minimalist approach to fitness
-            that challenges both the body and mind—no fancy equipment, just
-            consistency and creativity.
-          </p>
         </section>
         <section>
           <h2></h2>
