Add placeholders for diff sections and improve layout

--- a/pages/about.html
+++ b/pages/about.html
@@ -38,15 +38,35 @@
             alt="A calisthenics picture with a red and blue theme"
           />
         </section>
-        <section>
-          <h2></h2>
-          <img src="" alt="" />
-          <p></p>
+        <section class="activitySection">
+          <div>
+            <h2>Calisthenics</h2>
+            <p>
+              I practice calisthenics to build functional strength, improve body
+              control, and stay disciplined. It's a minimalist approach to
+              fitness that challenges both the body and mind—no fancy equipment,
+              just consistency and creativity.
+            </p>
+          </div>
+          <img
+            src="../img/calisthenic-pic.png"
+            alt="A calisthenics picture with a red and blue theme"
+          />
         </section>
-        <section>
-          <h2></h2>
-          <img src="" alt="" />
-          <p></p>
+        <section class="activitySection">
+          <div>
+            <h2>Calisthenics</h2>
+            <p>
+              I practice calisthenics to build functional strength, improve body
+              control, and stay disciplined. It's a minimalist approach to
+              fitness that challenges both the body and mind—no fancy equipment,
+              just consistency and creativity.
+            </p>
+          </div>
+          <img
+            src="../img/calisthenic-pic.png"
+            alt="A calisthenics picture with a red and blue theme"
+          />
         </section>
       </main>
     </div>
