Remove placeholders for diff section in about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -40,32 +40,31 @@
         </section>
         <section class="activitySection">
           <div>
-            <h2>Calisthenics</h2>
+            <h2>Cycling</h2>
             <p>
-              I practice calisthenics to build functional strength, improve body
-              control, and stay disciplined. It's a minimalist approach to
-              fitness that challenges both the body and mind—no fancy equipment,
-              just consistency and creativity.
+              I go cycling with friends around NYC to stay active, explore the
+              city, and unwind. Whether we're cruising through Central Park or
+              riding across the bridges, it's a great way to blend fitness, fun,
+              and good conversation.
             </p>
           </div>
           <img
-            src="../img/calisthenic-pic.png"
-            alt="A calisthenics picture with a red and blue theme"
+            src="../img/Cycling.png"
+            alt="A cycling picture of 2 people riding bikes throughout a city"
           />
         </section>
         <section class="activitySection">
           <div>
-            <h2>Calisthenics</h2>
+            <h2>Family</h2>
             <p>
-              I practice calisthenics to build functional strength, improve body
-              control, and stay disciplined. It's a minimalist approach to
-              fitness that challenges both the body and mind—no fancy equipment,
-              just consistency and creativity.
+              I prioritize time with family to stay grounded and recharge.
+              Whether it's sharing meals, catching up, or just being present,
+              those moments keep me connected to what matters most.
             </p>
           </div>
           <img
-            src="../img/calisthenic-pic.png"
-            alt="A calisthenics picture with a red and blue theme"
+            src="../img/family.png"
+            alt="A animated picture of a family getting ready to eat dinner"
           />
         </section>
       </main>
