Refactor html structure  and add styling to sections

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -20,26 +20,41 @@
     </header>
     <div class="contentContainer">
       <main>
-        <h2></h2>
-        <section>
-          <h2></h2>
-          <div>
-            <p></p>
-            <img src="" alt="" />
+        <h2>Projects I've Built</h2>
+        <section class="projectSection">
+          <div class="projectSubSection">
+            <h2>The First Project</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Explicabo, natus. Distinctio fugit non modi quo? Commodi
+              reiciendis perferendis, iste et iusto nisi molestiae corporis
+              assumenda ducimus dolor! Ut, molestiae ea.
+            </p>
+          </div>
+          <img src="../img/computer.png" alt="" />
+        </section>
+        <section class="projectSection">
+          <img src="../img/phone-app.png" alt="" />
+          <div class="projectSubSection">
+            <h2>The Second Project</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor
+              culpa, numquam iste corporis cum alias iusto eaque quod, suscipit
+              animi asperiores exercitationem a architecto sapiente tempore
+              voluptates, hic quidem ipsam!
+            </p>
           </div>
         </section>
-        <section>
-          <h2></h2>
-          <div>
-            <img src="" alt="" />
-            <p></p>
-          </div>
-        </section>
-        <section>
-          <h2></h2>
-          <div>
-            <p></p>
-            <img src="" alt="" />
+        <section class="projectSection">
+          <h2>The Third Project</h2>
+          <div class="projectSubSection">
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque
+              quo veritatis incidunt. Facilis, distinctio repellendus explicabo
+              et aspernatur sed alias assumenda odio labore, quis ducimus
+              perspiciatis accusamus recusandae omnis rerum!
+            </p>
+            <img src="../img/computer-2.png" alt="" />
           </div>
         </section>
       </main>
