Fix styling and element positioning for section elements

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -20,10 +20,10 @@
     </header>
     <div class="contentContainer">
       <main>
-        <h2>Projects I've Built</h2>
+        <h2 class="mainHeader">Projects I've Built</h2>
         <section class="projectSection">
           <div class="projectSubSection">
-            <h2>The First Project</h2>
+            <h2 class="projectTitles">The First Project</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit.
               Explicabo, natus. Distinctio fugit non modi quo? Commodi
@@ -36,7 +36,7 @@
         <section class="projectSection">
           <img src="../img/phone-app.png" alt="" />
           <div class="projectSubSection">
-            <h2>The Second Project</h2>
+            <h2 class="projectTitles">The Second Project</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor
               culpa, numquam iste corporis cum alias iusto eaque quod, suscipit
@@ -46,16 +46,16 @@
           </div>
         </section>
         <section class="projectSection">
-          <h2>The Third Project</h2>
           <div class="projectSubSection">
+            <h2 class="projectTitles">The Third Project</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque
               quo veritatis incidunt. Facilis, distinctio repellendus explicabo
               et aspernatur sed alias assumenda odio labore, quis ducimus
               perspiciatis accusamus recusandae omnis rerum!
             </p>
-            <img src="../img/computer-2.png" alt="" />
           </div>
+          <img src="../img/computer-2.png" alt="" />
         </section>
       </main>
     </div>
