Fix line spacing, and positio ning of multiple elements

--- a/pages/about.html
+++ b/pages/about.html
@@ -24,7 +24,7 @@
           When I'm not sharpening my skills, you'll find me doing the following:
         </h2>
         <section class="activitySection">
-          <div>
+          <div class="activityInfo">
             <h2>Calisthenics</h2>
             <p>
               I practice calisthenics to build functional strength, improve body
@@ -39,7 +39,7 @@
           />
         </section>
         <section class="activitySection">
-          <div>
+          <div class="activityInfo">
             <h2>Cycling</h2>
             <p>
               I go cycling with friends around NYC to stay active, explore the
@@ -54,7 +54,7 @@
           />
         </section>
         <section class="activitySection">
-          <div>
+          <div class="activityInfo">
             <h2>Family</h2>
             <p>
               I prioritize time with family to stay grounded and recharge.
