Add content and styling to footers. Fix padding on headers

--- a/pages/home.html
+++ b/pages/home.html
@@ -37,9 +37,10 @@
       </div>
     </div>
     <footer>
-      <h2>placeholder</h2>
       <a href="https://facebook.com"> <img src="" alt="" /></a>
-      <a href="https://linkedin.com"> <img src="" alt="" /></a>
+      <a href="https://linkedin.com">
+        <img src="../img/linkedin-icon.svg" alt="Linkedin"
+      /></a>
       <a href="https://twitter.com"> <img src="" alt="" /></a>
     </footer>
   </body>
