--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -61,7 +61,9 @@
     </div>
     <footer>
       <a href="https://facebook.com"> <img src="" alt="" /></a>
-      <a href="https://linkedin.com"> <img src="" alt="" /></a>
+      <a href="https://linkedin.com">
+        <img src="../img/linkedin-icon.svg" alt="Linkedin"
+      /></a>
       <a href="https://twitter.com"> <img src="" alt="" /></a>
     </footer>
   </body>
