Add styling to quote in home page

--- a/pages/home.html
+++ b/pages/home.html
@@ -31,8 +31,8 @@
       </main>
       <div class="quoteContainer">
         <h2 class="quote">
-          “Action produces information. Just keep on doing stuff.” - Brian
-          Armstrong
+          “Action produces information. Just keep on doing stuff.”
+          <span>- Brian Armstrong</span>
         </h2>
       </div>
     </div>
