--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,19 +21,23 @@
     <div class="contentContainer">
       <main>
         <h2>Get in Touch</h2>
-        <div>
-          <label for="first-name">First Name</label>
-          <input
-            type="text"
-            id="first-name"
-            placeholder="Please enter first name..."
-          />
-          <label for="last-name">Last Name</label>
-          <input
-            type="text"
-            id="last-name"
-            placeholder="Place enter last name..."
-          />
+        <div class="nameContainer">
+          <div>
+            <label for="first-name">First Name</label>
+            <input
+              type="text"
+              id="first-name"
+              placeholder="Please enter first name..."
+            />
+          </div>
+          <div>
+            <label for="last-name">Last Name</label>
+            <input
+              type="text"
+              id="last-name"
+              placeholder="Place enter last name..."
+            />
+          </div>
         </div>
         <div>
           <label for="email">Email</label>
