style: Fix styling on contact page. Still a WIP

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,8 +19,8 @@
       </nav>
     </header>
     <div class="contentContainer">
-      <main>
-        <h2>Get in Touch</h2>
+      <form>
+        <h2 class="contactHeader">Get in Touch</h2>
         <div class="nameContainer">
           <div>
             <label for="first-name">First Name</label>
@@ -54,7 +54,7 @@
           <input type="text" id="message" placeholder="Please enter query" />
         </div>
         <button>Submit</button>
-      </main>
+      </form>
     </div>
     <footer>
       <a href="https://facebook.com"> <img src="" alt="" /></a>
