--- a/pages/contact.html
+++ b/pages/contact.html
@@ -54,6 +54,7 @@
               type="tel"
               id="phone-number"
               placeholder="Please enter phone number..."
+              pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
             />
           </div>
         </div>
