Add media queries to all pages

--- a/pages/home.html
+++ b/pages/home.html
@@ -10,8 +10,9 @@
     <header class="topContainer">
       <h1>Christopher Paez</h1>
       <nav>
+        <img src="" alt="Menu" class="hamburger-icon" />
         <ul class="navContainer">
-          <li><a href="./home.html">Home</a></li>
+          <li><a class="active" href="./home.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="./contact.html">Contact</a></li>
