--- a/pages/about.html
+++ b/pages/about.html
@@ -12,7 +12,7 @@
       <nav>
         <ul class="navContainer">
           <li><a href="./home.html">Home</a></li>
-          <li><a href="./about.html">About</a></li>
+          <li><a class="active" href="./about.html">About</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="./contact.html">Contact</a></li>
         </ul>
