--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -13,7 +13,7 @@
         <ul class="navContainer">
           <li><a href="./home.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a class="active" href="./portfolio.html">Portfolio</a></li>
           <li><a href="./contact.html">Contact</a></li>
         </ul>
       </nav>
