--- a/pages/home.html
+++ b/pages/home.html
@@ -10,7 +10,7 @@
     <header class="topContainer">
       <h1>Christopher Paez</h1>
       <nav>
-        <img src="" alt="Menu" class="hamburger-icon" />
+        <img src="../img/hamburger.svg" alt="Menu" class="hamburger-icon" />
         <ul class="navContainer">
           <li><a class="active" href="./home.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
