--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -10,6 +10,7 @@
     <header class="topContainer">
       <h1>Christopher Paez</h1>
       <nav>
+        <img src="../img/hamburger.svg" alt="Menu" class="hamburger-icon" />
         <ul class="navContainer">
           <li><a href="./home.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
